--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -26,7 +26,7 @@ main {
 .container {
   height: 250px;
   padding-top: 50px;
-  background-color: aqua;
+  background-color: slateblue;
   padding-bottom: 150px;
   font-family: 'Courier New', Courier, monospace;
   display: flex;
@@ -41,7 +41,7 @@ main {
   align-items: center;
   height: 250px;
   padding-top: 50px;
-  background-color: lightyellow;
+  background-color: gold;
   list-style: none;
   font-family:  'Courier New', monospace;
   font-size: 20px;
@@ -53,7 +53,7 @@ main {
   align-items: center;
   height: 250px;
   padding-top: 50px;
-  background-color: lightgreen;
+  background-color: tomato;
   list-style: none;
   font-family:  'Courier New', monospace;
   font-size: 20px;
@@ -104,7 +104,7 @@ main {
   background-size: cover;
   height: 463px;
   padding-top: 50px;
-  background-color: aqua;
+  background-color: tomato;
   padding-bottom: 150px;
   font-family: 'Courier New', Courier, monospace;
 }
@@ -121,3 +121,30 @@ main {
   padding-top: 150px;
 }
 
+.port-div {
+  font-size: 20px;
+  background-size: cover;
+  height: 463px;
+  padding-top: 50px;
+  background-color: slateblue;
+  padding-bottom: 150px;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.work-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.pokewiki {
+  padding: 125px;
+}
+
+.yakesale {
+  padding: 125px;
+}
+
+.browgames {
+  padding: 125px;
+}
