--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,3 +1,11 @@
+* {
+  text-decoration: none;
+}
+
+a {
+  color: black;
+}
+
 .navbar {
   background-color: gray;
   opacity: 0.7;
@@ -139,12 +147,21 @@ main {
 
 .pokewiki {
   padding: 125px;
+  background-image: url(https://imgur.com/sd0Xq6c.png);
+  background-size: 400px;
+  border: solid;
 }
 
 .yakesale {
   padding: 125px;
+  background-image: url(https://imgur.com/eJ0UvFX.png);
+  background-size: 400px;
+  border: solid;
 }
 
 .browgames {
   padding: 125px;
+  background-image: url(https://imgur.com/GHvgASi.png);
+  background-size: 400px;
+  border: solid;
 }
